[add] withdrawal function to public users

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -280,6 +280,15 @@ footer {
 }
 
 
+// public/users/unsubscribe page
+
+.unsubscribe {
+  .border {
+    border: 1px solid #c2a8ff !important;
+  }
+}
+
+
 // instructors/mypage
 
 .instructor-mypage{
