--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -51,7 +51,7 @@
         <%# <% end %>
       </div>
       <div class="withdraw-link my-5 text-right">
-        <%= link_to "※ 退会をご希望の方はこちら", unsubcribe_path, class: 'hover-link' %>
+        <%= link_to "※ 退会をご希望の方はこちら", unsubscribe_path, class: 'hover-link' %>
       </div>
     </div>
   </div>
