--- a/app/views/instructors/users/index.html.erb
+++ b/app/views/instructors/users/index.html.erb
@@ -25,7 +25,7 @@
                 <% end %>
               </td>
               <td><%= user.email %></td>
-              <td><%= is_valid_value(user) %></td>
+              <td><%= valid_value?(user) %></td>
             </tr>
           <% end %>
         </tbody>
