--- a/app/views/instructors/users/show.html.erb
+++ b/app/views/instructors/users/show.html.erb
@@ -31,7 +31,7 @@
             </tr>
             <tr>
               <td>会員ステータス</td>
-              <td><%= is_valid_value(@user) %></td>
+              <td><%= valid_value?(@user) %></td>
             </tr>
           </tbody>
         </table>
