--- a/app/views/public/instructors/show.html.erb
+++ b/app/views/public/instructors/show.html.erb
@@ -32,7 +32,7 @@
         </table>
       </div>
       <div class="links col-8 offset-2 d-flex justify-content-between mt-5">
-        <%= link_to "空き状況を確認する", root_path, class: 'btn btn-outline-light px-5' %>
+        <%= link_to "予約の空き状況を確認する", reservations_path(instructor_id: @instructor.id), class: 'btn btn-outline-light px-5' %>
         <%= link_to "チャットで質問する", root_path, class: 'btn btn-outline-light px-5' %>
       </div>
       <div class="review mt-5 pt-5 col-10 offset-1">
