--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -3,10 +3,7 @@
     <ul>
       <% obj.errors.full_messages.each do |message| %>
         <li>
-          <div class="alert alert-danger alert-dismissible fade show" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="閉じる">
-              <span aria-hidden="true">&times;</span>
-            </button>
+          <div class="alert alert-danger">
             <%= message %>
           </div>
         </li>
