[update] reservations controller

--- a/app/views/public/reservations/index.html.erb
+++ b/app/views/public/reservations/index.html.erb
@@ -12,6 +12,7 @@
         ※ 必ずログイン後に予約してください。（ご予約は入会されている方のみ可能です。）
       </p>
       <div id="calendar" class="py-5"></div>
+      <p>※ 予約のキャンセルをご希望の方は、マイページからお願い致します。<br>※ ご予約日の前日または当日にキャンセルしたい場合は、予約したレッスンのインストラクターまでチャットにてご連絡ください。</p>
     </div>
   </div>
 </div>
