--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -284,16 +284,44 @@ footer {
 // public/chat page
 
 .user-chat-page {
+  .instructor-icon {
+    img {
+      width: 80px;
+      height: 80px;
+      object-fit: cover;
+      object-position: 0% 0%;
+      border-radius: 50%;
+    }
+  }
+
   .user-chat-form {
     position: fixed;
-    bottom: 130px;
-    width: 52%;
+    bottom: 81px;
+    left: 0;
+    width: 100%;
+    background-color: rgba(21, 21, 21, 1);
+    padding-bottom: 30px;
 
     .chat-submit {
       position: fixed;
-      bottom: 130px;
+      bottom: 81px;
+      margin-bottom: 30px;
     }
   }
+}
+
+.footer-height {
+  width: 100%;
+  height: 149px;
+}
+
+#chat-footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  z-index: 900;
+  background-color: rgba(21, 21, 21, 1);
 }
 
 
@@ -401,14 +429,32 @@ footer {
 .instructor-chat-page {
   .instructor-chat-form {
     position: fixed;
-    bottom: 130px;
-    width: 52%;
+    bottom: 81px;
+    left: 0;
+    width: 100%;
+    background-color: rgba(21, 21, 21, 1);
+    padding-bottom: 30px;
 
     .chat-submit {
       position: fixed;
-      bottom: 130px;
+      bottom: 81px;
+      margin-bottom: 30px;
     }
   }
+}
+
+.footer-height {
+  width: 100%;
+  height: 149px;
+}
+
+#chat-footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  z-index: 900;
+  background-color: rgba(21, 21, 21, 1);
 }
 
 
