--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -284,13 +284,84 @@ footer {
 // public/chat page
 
 .user-chat-page {
-  .instructor-icon {
-    img {
-      width: 80px;
-      height: 80px;
-      object-fit: cover;
-      object-position: 0% 0%;
-      border-radius: 50%;
+  #user-chats {
+    text-align: right;
+
+    .my-chats {
+      margin: 15px 0;
+
+      p {
+        display: inline-block;
+        position: relative;
+        margin: 0 10px 0 0;
+        padding: 10px;
+        max-width: 300px;
+        border-radius: 12px;
+        background-color: #b09dfb;
+        color: #000000;
+
+        &:after {
+          content: "";
+          position: absolute;
+          top: 3px;
+          right: -19px;
+          border: 8px solid transparent;
+          border-left: 18px solid #b09dfb;
+          -webkit-transform: rotate(-35deg);
+          transform: rotate(-35deg);
+        }
+      }
+    }
+
+    .instructor-chats {
+      width: 100%;
+      overflow: hidden;
+      margin-left: -50px;
+
+      .instructor-icon {
+        img {
+          width: 80px;
+          height: 80px;
+          object-fit: cover;
+          object-position: 0% 0%;
+          border-radius: 50%;
+          margin: 10px 0;
+        }
+      }
+
+      .chat-wrap {
+        width: 100%;
+        text-align: left;
+        margin: 20px 0;
+
+        .chat-content {
+          display: inline-block;
+          position: relative;
+          margin: 0 0 0 40px;
+          padding: 10px;
+          max-width: 300px;
+          border-radius: 12px;
+          background-color: #f6f7ff;
+
+          &:after {
+            content: "";
+            display: inline-block;
+            position: absolute;
+            top: 3px;
+            left: -19px;
+            border: 8px solid transparent;
+            border-right: 18px solid #f6f7ff;
+            -webkit-transform: rotate(35deg);
+            transform: rotate(35deg);
+          }
+
+          p {
+            margin: 0;
+            padding: 0;
+            color: #000000;
+          }
+        }
+      }
     }
   }
 
@@ -300,19 +371,19 @@ footer {
     left: 0;
     width: 100%;
     background-color: rgba(21, 21, 21, 1);
-    padding-bottom: 30px;
+    padding: 20px 0 30px 0;
 
     .chat-submit {
       position: fixed;
       bottom: 81px;
-      margin-bottom: 30px;
+      margin: 20px 0 30px 0;
     }
   }
 }
 
 .footer-height {
   width: 100%;
-  height: 149px;
+  height: 170px;
 }
 
 #chat-footer {
@@ -427,25 +498,106 @@ footer {
 // instructors/chat page
 
 .instructor-chat-page {
+  #instructor-chats {
+    text-align: right;
+
+    .my-chats {
+      margin: 15px 0;
+
+      p {
+        display: inline-block;
+        position: relative;
+        margin: 0 10px 0 0;
+        padding: 10px;
+        max-width: 300px;
+        border-radius: 12px;
+        background-color: #b09dfb;
+        color: #000000;
+
+        &:after {
+          content: "";
+          position: absolute;
+          top: 3px;
+          right: -19px;
+          border: 8px solid transparent;
+          border-left: 18px solid #b09dfb;
+          -webkit-transform: rotate(-35deg);
+          transform: rotate(-35deg);
+        }
+      }
+    }
+
+    .user-chats {
+      width: 100%;
+      overflow: hidden;
+      margin-left: -50px;
+
+      .user-icon {
+        img {
+          width: 80px;
+          height: 80px;
+          object-fit: cover;
+          object-position: 0% 0%;
+          border-radius: 50%;
+          margin: 10px 0;
+        }
+      }
+
+      .chat-wrap {
+        width: 100%;
+        text-align: left;
+        margin: 20px 0;
+
+        .chat-content {
+          display: inline-block;
+          position: relative;
+          margin: 0 0 0 40px;
+          padding: 10px;
+          max-width: 300px;
+          border-radius: 12px;
+          background-color: #f6f7ff;
+
+          &:after {
+            content: "";
+            display: inline-block;
+            position: absolute;
+            top: 3px;
+            left: -19px;
+            border: 8px solid transparent;
+            border-right: 18px solid #f6f7ff;
+            -webkit-transform: rotate(35deg);
+            transform: rotate(35deg);
+          }
+
+          p {
+            margin: 0;
+            padding: 0;
+            color: #000000;
+          }
+        }
+      }
+    }
+  }
+
   .instructor-chat-form {
     position: fixed;
     bottom: 81px;
     left: 0;
     width: 100%;
     background-color: rgba(21, 21, 21, 1);
-    padding-bottom: 30px;
+    padding:20px 0 30px 0;
 
     .chat-submit {
       position: fixed;
       bottom: 81px;
-      margin-bottom: 30px;
+      margin:20px 0 30px 0;
     }
   }
 }
 
 .footer-height {
   width: 100%;
-  height: 149px;
+  height: 170px;
 }
 
 #chat-footer {
