--- a/app/views/public/rooms/show.html.erb
+++ b/app/views/public/rooms/show.html.erb
@@ -6,14 +6,14 @@
   <div class="row">
     <div class="user-chat-page col-10 offset-1">
       <h2 class="border-heading-bottom mb-5">チャット（<%= @room.instructor.name %>）</h2>
-      <div id="user-chats">
+      <div id="user-chats" class="col-10 offset-1">
         <% @chats.each do |chat| %>
           <% if chat.is_user == true %>
             <div class="my-chats">
               <p><%= chat.message %></p>
             </div>
           <% else %>
-            <div class="instructor-chats">
+            <div class="instructor-chats d-flex">
               <div class="instructor-icon">
                 <%= image_tag @room.instructor.instructor_image.url(:thumb) %>
               </div>
