[update] reservation validation message and add scroll

--- a/app/views/public/reservations/errors.js.erb
+++ b/app/views/public/reservations/errors.js.erb
@@ -2,3 +2,4 @@ $('.js-error-message').replaceWith(
   "<%= j(render 'shared/error_messages', obj: @reservation) %>"
 );
 $('#new_reservation').modal('hide');
+$('body, html').animate({ scrollTop: 0 }, 500 );
