--- a/app/views/public/reservations/index.html.erb
+++ b/app/views/public/reservations/index.html.erb
@@ -9,7 +9,8 @@
       <h2 class="border-heading-bottom mb-5">レッスン予約状況（インストラクター：<%= @instructor.name %>）</h2>
       <p>
         ※ 空き状況を確認し、レッスンご受講の希望日をクリックしてご希望のレッスン開始時間を選択してください。（レッスン実施時間は１時間です。） <br>
-        ※ 必ずログイン後に予約してください。（ご予約は入会されている方のみ可能です。）
+        ※ 必ずログイン後に予約してください。（ご予約は入会されている方のみ可能です。）<br>
+        ※ 一回にお取りになれるご予約は、お一人様につき一つとなっております。
       </p>
       <div id="calendar" class="py-5"></div>
       <p>※ 予約のキャンセルをご希望の方は、マイページからお願い致します。<br>※ ご予約日の前日または当日に予約をキャンセル・変更したい場合は、予約したレッスンのインストラクターまでチャットにてご連絡ください。</p>
