--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -228,6 +228,45 @@ footer {
 // public/mypage
 
 .mypage {
+  .user-image {
+    .image-wrap {
+      overflow: hidden;
+      position: relative;
+
+      &:hover .icon-mask {
+        opacity: 1;
+        border-radius: 50%;
+        cursor: pointer;
+      }
+
+      .caption {
+        text-align: center;
+        padding-top: 68px;
+        color: #fff;
+      }
+
+      .icon-mask {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        opacity: 0;
+        background-color: rgba(0,0,0,0.4);
+        -webkit-transition: all .3s ease;
+        transition: all .3s ease;
+      }
+    }
+
+    img {
+      border-radius: 50%;
+      padding: 3px;
+      border: 1px solid #ccc;
+      transition: .3s;
+      cursor: pointer;
+    }
+  }
+
   .table {
     font-size: 1.1rem;
     .td-left {
