--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -8,26 +8,41 @@
       <h2 class="border-heading-bottom mb-5">マイページ</h2>
       <div class="user-info border-bottom pb-4">
         <h4 class="border-heading-side my-5 pt-3">ご登録情報</h4>
-        <table class="table table-borderless table-sm col-md-8 offset-md-2 col-10 offset-1">
-          <tbody>
-            <tr>
-              <td class="td-left">氏名</td>
-              <td><%= current_user.fullname %></td>
-            </tr>
-            <tr>
-              <td>カナ</td>
-              <td><%= current_user.kana_fullname %></td>
-            </tr>
-            <tr>
-              <td>メールアドレス</td>
-              <td><%= current_user.email %></td>
-            </tr>
-            <tr>
-              <td>電話番号</td>
-              <td><%= current_user.phone_number %></td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="user-info-main d-flex">
+          <div class="user-image px-5">
+            <%= form_with model: @user, url: users_information_path, id: 'icon-form', local: true do |f| %>
+              <%= f.label :icon_image do %>
+                <div class="image-wrap">
+                  <%= image_tag @user.icon_image.url, class: 'user-icon' %>
+                  <div class="icon-mask">
+                    <div class="caption">変更する</div>
+                  </div>
+                </div>
+                <%= f.file_field :icon_image, style: 'display: none;', class: 'uploader' %>
+              <% end %>
+            <% end %>
+          </div>
+          <table class="table table-borderless table-sm col-md-8 col-10 ml-3 mt-3">
+            <tbody>
+              <tr>
+                <td class="td-left">氏名</td>
+                <td><%= @user.fullname %></td>
+              </tr>
+              <tr>
+                <td>カナ</td>
+                <td><%= @user.kana_fullname %></td>
+              </tr>
+              <tr>
+                <td>メールアドレス</td>
+                <td><%= @user.email %></td>
+              </tr>
+              <tr>
+                <td>電話番号</td>
+                <td><%= @user.phone_number %></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
         <div class="edit-link text-right pr-5">
           <%= link_to edit_information_path, class: 'border-bottom hover-link' do %>
             登録情報を編集する　→
@@ -35,10 +50,10 @@
         </div>
       </div>
       <div class="mypage-bottom mt-5">
-        <% if current_user.reservation.present? %>
+        <% if @user.reservation.present? %>
           <div class="reservation-info col-md-8 offset-md-2 border p-4">
             <p class="mb-0">
-              <%= current_user.firstname %>さんの次回のレッスン予約日時は、
+              <%= @user.firstname %>さんの次回のレッスン予約日時は、
             </p>
             <p class="text-right mb-3">
               <span class="reservation-important">
