--- a/app/views/instructors/rooms/show.html.erb
+++ b/app/views/instructors/rooms/show.html.erb
@@ -15,7 +15,7 @@
           <% else %>
             <div class="user-chats d-flex">
               <div class="user-icon">
-                <%# userのアイコン登録できるようにする！ %>
+                <%= image_tag @room.user.icon_image.url %>
               </div>
               <div class="chat-wrap">
                 <div class="chat-content">
