[add] ajax to chat

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -340,6 +340,7 @@ footer {
         border-radius: 12px;
         background-color: #b09dfb;
         color: #000000;
+        text-align: left;
 
         &:after {
           content: "";
@@ -556,6 +557,7 @@ footer {
         border-radius: 12px;
         background-color: #b09dfb;
         color: #000000;
+        text-align: left;
 
         &:after {
           content: "";
