--- a/app/views/public/rooms/show.html.erb
+++ b/app/views/public/rooms/show.html.erb
@@ -6,28 +6,11 @@
   <div class="row">
     <div class="user-chat-page col-10 offset-1">
       <h2 class="border-heading-bottom mb-5">チャット（<%= @room.instructor.name %>）</h2>
-      <div id="user-chats">
-        <% @chats.each do |chat| %>
-          <% if chat.is_user == true %>
-            <div class="my-chats">
-              <p><%= chat.message %></p>
-            </div>
-          <% else %>
-            <div class="instructor-chats d-flex">
-              <div class="instructor-icon">
-                <%= image_tag @room.instructor.instructor_image.url(:thumb) %>
-              </div>
-              <div class="chat-wrap">
-                <div class="chat-content">
-                  <p><%= chat.message %></p>
-                </div>
-              </div>
-            </div>
-          <% end %>
-        <% end %>
+      <div id="chat-wrap">
+        <%= render 'chat-content', chats: @chats, room: @room %>
       </div>
       <div class="user-chat-form">
-        <%= form_with model: @chat, url: chats_path, local: true do |f| %>
+        <%= form_with model: @chat, url: chats_path do |f| %>
           <%= f.hidden_field :is_user, :value => true %>
           <%= f.hidden_field :room_id, :value => @room.id %>
           <div class="chat-text col-8 offset-2 d-flex justify-content-center">
