--- a/app/views/public/reservations/errors.js.erb
+++ b/app/views/public/reservations/errors.js.erb
@@ -1,5 +1,3 @@
-$('.js-error-message').replaceWith(
-  "<%= j(render 'shared/error_messages', obj: @reservation) %>"
-);
+$('.js-error-message').replaceWith("<%= j(render 'shared/error_messages', obj: @reservation) %>");
 $('#new_reservation').modal('hide');
 $('body, html').animate({ scrollTop: 0 }, 500 );
