[fix] users controller and [add] modal to users show page

--- a/app/views/instructors/instructors/show.html.erb
+++ b/app/views/instructors/instructors/show.html.erb
@@ -84,7 +84,7 @@
                   <button type="button" class="btn btn-outline-light btn-sm" data-toggle="modal" data-target="#ReservationModal-<%= reservation.id %>">
                     変更する
                   </button>
-                  <div class="modal fade" id="ReservationModal-<%= reservation.id %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                  <div class="modal fade" id="ReservationModal-<%= reservation.id %>" tabindex="-1" role="dialog" aria-hidden="true">
                   <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
                     <div class="modal-content text-dark">
                       <div class="modal-header">
