--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -61,9 +61,28 @@
               </span>です。
             </p>
             <div class="my-reservation-links d-flex justify-content-between col-10 offset-1">
-              <button type="button" class="btn btn-outline-light btn-sm" data-toggle="modal" data-target="#exampleModalCenter">
+              <button type="button" class="btn btn-outline-light btn-sm" data-toggle="modal" data-target="#userReservationModal">
                 予約日時を変更する
               </button>
+              <div class="modal fade" id="userReservationModal" tabindex="-1" role="dialog" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalCenterTitle">Modal title</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      ...
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
               <%= link_to "予約をキャンセルする", class: 'btn btn-outline-light btn-sm' %>
             </div>
           </div>
