--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -87,7 +87,7 @@
                     </div>
                 </div>
               </div>
-              <%= link_to "予約をキャンセルする", class: 'btn btn-outline-light btn-sm' %>
+              <%= link_to "予約をキャンセルする", reservation_path(@reservation), class: 'btn btn-outline-light btn-sm', method: :delete, data: { confirm: '本当にキャンセルしますか？' } %>
             </div>
           </div>
         <% else %>
