--- a/app/views/public/reservations/create.js.erb
+++ b/app/views/public/reservations/create.js.erb
@@ -2,5 +2,10 @@ $('#calendar').fullCalendar(
   'renderEvent',
   $.parseJSON("<%= j render(@reservation, format: :json).html_safe %>"), true
 );
-$('js-error-message').empty();
+$('.js-error-message').empty();
+$('#error_explanation').empty();
 $('#new_reservation').modal('hide');
+<% flash.each do |message_type, message| %>
+  $('#flash-messages').html("<div class='alert alert-success alert-dismissible fade show' role='alert'><button type='button' class='close' data-dismiss='alert' aria-label='閉じる'><span aria-hidden='true'>&times;</span></button><%= message %></div>");
+<% end %>
+$('body, html').animate({ scrollTop: 0 }, 500 );
