--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -3,7 +3,7 @@
 <div class="main-top col-12 mt-5">
   <div class="main-content d-flex mt-3">
     <div class="img col-7 ml-3">
-      <%= image_tag asset_path('top-img'), :size => '1100x400' %>
+      <%= image_tag asset_path('top-img.png'), :size => '1100x400' %>
     </div>
     <div class="main-content-sub col-4 pl-5">
       <p>LYbodyは完全オンラインの <br> パーソナルジムです！ <br> 自宅で最高のトレーニングを！</p>
@@ -12,12 +12,12 @@
 
   <div class="main-images my-5 py-5">
     <div class="image-list-top d-flex mt-5">
-      <li class="image-list-item col-6"><%= image_tag asset_path('top1'), class: 'img-fluid' %></li>
-      <li class="image-list-item col-6"><%= image_tag asset_path('top2'), class: 'img-fluid' %></li>
+      <li class="image-list-item col-6"><%= image_tag asset_path('top1.jpg'), class: 'img-fluid' %></li>
+      <li class="image-list-item col-6"><%= image_tag asset_path('top2.jpg'), class: 'img-fluid' %></li>
     </div>
     <div class="image-list-bottom d-flex my-5 pt-5">
-      <li class="image-list-item col-6"><%= image_tag asset_path('top3'), class: 'img-fluid' %></li>
-      <li class="image-list-item col-6"><%= image_tag asset_path('top4'), class: 'img-fluid' %></li>
+      <li class="image-list-item col-6"><%= image_tag asset_path('top3.jpg'), class: 'img-fluid' %></li>
+      <li class="image-list-item col-6"><%= image_tag asset_path('top4.jpg'), class: 'img-fluid' %></li>
     </div>
   </div>
 </div>
