[update] cards controller and routing

--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -18,12 +18,13 @@
         </p>
       </div>
       <div class="about-sub-content mt-5 pt-4">
-        <h3 class="border-heading-side mb-4">ご入会について</h3>
+        <h3 class="border-heading-side mb-4">ご受講について</h3>
         <p>
           まずは、会員登録から行ってください。 <br>
           ※ ページ上部にあるログインのリンクをクリックすると、下側に「新規登録する」ボタンがあるので、そちらをクリックして登録してください。<br>
 
-          会員登録が完了したら、マイページにて「支払いをして入会する」ボタンをクリックし、クレジットカード情報を入力して頂きますと入会手続きが完了致します。<br>
+          会員登録が完了したら、マイページにて「支払いをしてレッスンを受講する」ボタンをクリックし、クレジットカード情報を入力し送信して頂きますとご受講のための手続きが完了致します。<br>
+          料金は1ヶ月：8000円で、レッスン受け放題となっております。（要予約）<br>
           ※ 決済は、クレジットカードのみとなります。（定期決済）
         </p>
       </div>
