[update] card new page

--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -98,7 +98,7 @@
           <% end %>
         <% else %>
           <div class="pay-link text-center pt-5">
-            <%= link_to "支払いをしてレッスンを受講する", root_path, class: 'btn btn-outline-light btn-lg px-5' %>
+            <%= link_to "支払い手続きをしてレッスンを受講する", new_card_path, class: 'btn btn-outline-light px-5' %>
           </div>
         <% end %>
       </div>
